      license-problem-convert-utf-code.
    + [BR] Avoid a false positive in gfdl file detection.
    + [NT] Drop tags about outdated autotools config.guess and
      config.sub files.  These days debhelper automatically updates
      them when people use the dh-sequencer and the check is not
      geared for more thorough analysis.  (Closes: #848878)
  * checks/debian-readme.{desc,pm}:
    + [NT] Locate the README.Debian using the index rather than relying
      on a collection.
  * checks/fields.pm:
    + [BR] Enforce naming convention for debug package.  (Closes: #645455).
    + [NT] Avoid proposing "/git/git/" as a part of the canonical URL for
      anonscm.debian.org.  Thanks to Andreas Beckmann for spotting the
      bug.  (Closes: #851215)
  * checks/files.pm:
    + [BR] Do not report duplicates for package-installs-apt-preferences
      and package-installs-apt-sources.  (Closes: #814521).
    + [NT] Apply patch from Helmut Grohne to detect some possible invalid
      uses of "Multi-Arch: foreign".  (Closes: #856975)
    + [NT] Improve the empty-binary-package tag by adding more common
      files that should be ignored.  Thanks to Helmut Grohne for all the
      research behind it.  (Closes: #856857)
    + [BR] Detect symlink pointing to builddir.  (Closes: #860419)
  * checks/gir.{desc,pm}:
    + [NT] Add check for gir packages written by Simon McVittie.
      (Closes: #695345)
  * checks/init.d.{desc,pm}:
    + [NT] Remove check for init.d scripts accessing /usr without a
      $remote_fs dependency as /usr must now be mounted by the initramfs.
      (Closes: #829649)
  * checks/menu-format.{desc,pm}:
    + [NT] Update the reference to Desktop Entry Specification to point
      to version 1.1.
    + [NT] Apply patch from Laurent Bigonville to check desktop files
      for missing "Icon" field.  (Closes: #854132)
  * checks/rules.{desc,pm}:
    + [NT] Drop "package-would-benefit-from-build-arch-targets".  The