@@ -1,0 +1,5 @@
+cruft-readme-source for Debian
+------------------------------
+
+<this file describes information about the source package, see Debian policy
+manual section 4.14. You WILL either need to modify or delete this file>
