@@ -1,0 +1,6 @@
+Testname: cruft-readme-source
+Sequence: 6000
+Version: 1.0
+Description: Check for cruft in README.source
+Test-For:
+ readme-source-is-dh_make-template
