@@ -1,0 +1,1 @@
+E: cruft-readme-source source: readme-source-is-dh_make-template
